# llm-node-chat

./: .gitignore  CLAUDE.md  LICENSE  README.ja.md  README.md  package-lock.json  package.json
.clinerules/: 002-core-instruction.md
backend/: .env.example  chat.db  pyproject.toml
backend/src/backend/: database.py  llm_service.py  main.py  models.py  schemas.py
backend/src/backend/routers/: chat.py  conversations.py  providers.py  websocket_chat.py
backend/tests/: test_api.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
frontend/src/: test-setup.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ConversationTree.tsx  LanguageSwitcher.tsx  MessageInput.tsx  MessageList.tsx  SettingsModal.tsx  Sidebar.tsx
frontend/src/i18n/: request.ts
frontend/src/i18n/messages/: en.json  ja.json  zh.json
frontend/src/lib/: actions.ts  api.ts  websocket.ts
frontend/src/store/: conversationStore.test.ts  conversationStore.ts  settingsStore.ts
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
